드론 프레임페이지 수정

--- a/danusys-drone/src/main/resources/templates/test/droneFrame.html
+++ b/danusys-drone/src/main/resources/templates/test/droneFrame.html
@@ -166,7 +166,7 @@
                         <dd><span class="count">123</span>건</dd>
                     </dl>
                     <ul class="button">
-                        <li>수정</li>
+                        <li class="update_drone_detail_button">수정</li>
                         <li>삭제</li>
                     </ul>
                 </div>
@@ -175,7 +175,7 @@
                     <dl>
                         <dt>위치</dt>
                         <dd>
-                            <input type="text" placeholder="신림면 드론 기지 01">
+                            <input type="text" placeholder="신림면 드론 기지 01" class="drone_location">
                         </dd>
                     </dl>
                     <dl>
@@ -185,7 +185,7 @@
                         </dd>
                         <dt>정</dt>
                         <dd>
-                            <input type="text" placeholder="정 담당자명">
+                            <input type="text" placeholder="정 담당자명" class="drone_master_manager">
                         </dd>
                     </dl>
                     <dl>
@@ -195,27 +195,27 @@
                         </dd>
                         <dt>부</dt>
                         <dd>
-                            <input type="text" placeholder="부 담당자명">
+                            <input type="text" placeholder="부 담당자명" class="drone_sub_manager">
                         </dd>
                     </dl>
                     <dl>
                         <dt>기기명</dt>
                         <dd>
-                            <input type="text" placeholder="DJI 신림 11호">
+                            <input type="text" placeholder="DJI 신림 11호" class="drone_name" disabled>
                         </dd>
                         <dt>제조사</dt>
                         <dd>
-                            <input type="text" placeholder="(주) 아소아">
+                            <input type="text" placeholder="(주) 아소아" class="drone_manufacturer">
                         </dd>
                     </dl>
                     <dl>
                         <dt>등록일자</dt>
                         <dd>
-                            <input type="date">
+                            <input type="date" class="drone_insert_dt" disabled>
                         </dd>
                         <dt>유형</dt>
                         <dd>
-                            <input type="text" placeholder="헥사콥터">
+                            <input type="text" placeholder="헥사콥터" class="drone_type">
                         </dd>
                     </dl>
                     <dl>
@@ -227,47 +227,47 @@
                         </dd>
                         <dt>최대 이륙 증량</dt>
                         <dd>
-                            <input type="text" placeholder="00 kg">
+                            <input type="text" placeholder="00 kg" class="">
                         </dd>
                     </dl>
                     <dl>
                         <dt>자체 중량</dt>
                         <dd>
-                            <input type="text" placeholder="00 kg">
+                            <input type="text" placeholder="00 kg" class="drone_weight">
                         </dd>
                         <dt>비행 시간</dt>
                         <dd>
-                            <input type="text" placeholder="00 분">
+                            <input type="text" placeholder="00 분 " >
                         </dd>
                     </dl>
                     <dl>
                         <dt>최대 운용 거리</dt>
                         <dd>
-                            <input type="text" placeholder="00 km">
+                            <input type="text" placeholder="00 km" class="drone_maximum_operating_distance">
                         </dd>
                         <dt>최대 운용 고도</dt>
                         <dd>
-                            <input type="text" placeholder="00 ~ 00 m">
+                            <input type="text" placeholder="00 ~ 00 m" class="drone_maximum_management_altitude">
                         </dd>
                     </dl>
                     <dl>
                         <dt>운용 온도 범위</dt>
-                        <dd>
-                            <input type="text" placeholder="00 ℃ ~ 00 ℃">
+                        <dd><!--아직 작업안함-->
+                            <input type="text" placeholder="00 ℃ ~ 00 ℃" class="drone_operating_temperature_range">
                         </dd>
                         <dt>최대 운용 풍속</dt>
                         <dd>
-                            <input type="text" placeholder="00 m/s">
+                            <input type="text" placeholder="00 m/s" class="drone_maximum_operating_speed">
                         </dd>
                     </dl>
                     <dl>
                         <dt>SIM 넘버</dt>
                         <dd>
-                            <input type="text" placeholder="00000000000">
+                            <input type="text" placeholder="00000000000" class="drone_sim_number">
                         </dd>
                         <dt>최대 속도</dt>
                         <dd>
-                            <input type="text" placeholder="00 m/s">
+                            <input type="text" placeholder="00 m/s" class="drone_maximum_speed">
                         </dd>
                     </dl>
                 </div>
