--- a/danusys-platform/src/main/resources/templates/layout/layout_config.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_config.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div class="wrap">
+    <th:block th:replace="fragments/default/modal_bg :: modalBgFragment" />
     <th:block th:replace="fragments/default/header :: headerFragment" />
 
     <div class="setting">
