스크롤 관련 css 추가 / station sql 수정

--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -247,3 +247,5 @@
 .search_table .dataTables_wrapper{height: 100%; display: flex; flex-direction: column;}
 .search_table .dataTables_wrapper .tableBody{flex: 1;}
 
+/* table scroll head fix */
+.search_table .dataTables_wrapper .dataTables_scroll {height: 100%;}
