--- a/danusys-drone/src/main/resources/static/css/default/layout.css
+++ b/danusys-drone/src/main/resources/static/css/default/layout.css
@@ -161,7 +161,7 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 
 
 /* mapComponent */
-.mapComponent{display: flex; flex-direction: column; grid-gap: 10px; width: calc(100% - 340px); position: absolute; right: 10px; bottom: 10px; background: lightsteelblue;}
+.mapComponent{display: flex; flex-direction: column; grid-gap: 10px; width: calc(100% - 340px); position: absolute; right: 10px; bottom: 10px; background: lightsteelblue; z-index: 1;}
 .mapComponentSet{position: absolute; right: 470px; bottom: 0px; display: grid; grid-template-columns: 1fr 1fr; grid-gap: 10px;}
 .mapComponent article{flex: 1; display: flex; flex-direction: column; height: 160px; overflow: hidden; border-radius: 4px; background: #1e1f23;}
 .mapComponent article h6{height: 40px; line-height: 38px; padding: 0px 14px; font-size: 13px; font-weight: bold; color: #dee0e4; background: #1a1b1d;}
@@ -202,7 +202,7 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 .mapComponent article.stream .streamValues .slideBar dd .bar:hover{opacity: 1;}
 .mapComponent article.stream .streamValues .slideBar dd .bar::-webkit-slider-thumb{-webkit-appearance: none; appearance: none; width: 40px; height: 8px; border-radius: 8px; background: #3268e2; cursor: pointer;}
 .mapComponent article.stream .streamValues .slideBar dd .bar::-moz-range-thumb{width: 25px; height: 25px; background: #04aa6d; cursor: pointer;}
-.mapComponentMission{position: absolute; right: 1px; top: -50em;display: flex; flex-direction: column; align-items: flex-end; justify-content: flex-end; grid-gap: 10px;}
+.mapComponentMission{position: absolute; right: 1px; top: -63em;display: flex; flex-direction: column; align-items: flex-end; justify-content: flex-end; grid-gap: 10px;}
 .mapComponentMission .missionRoute{ overflow: hidden; width: 400px; height: 632px; max-height: 632px; border-radius: 4px;}
 
 .missionRoute .title{display: flex; align-items: center; justify-content: space-between; height: 60px; padding: 0px 14px; font-size: 16px; box-sizing: border-box; border-bottom: 2px solid #292c34; background: #1a1b1d;}
@@ -255,6 +255,7 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 .selectBox .box .select{position: relative; border: 1px solid #292c34; box-sizing: border-box; padding: 0px 14px; height: 40px; line-height: 35px; font-size: 14px; color: #dee0e4; background: transparent; border-radius: 4px; cursor: pointer;}
 .selectBox .box .select:after{content: '▼'; position: absolute; top: 0px; right: 10px;}
 .selectBox.on .box .select:after{content: '▲';}
+.selectBox.type1 .box .select:first-child:after{content: none;}
 .selectBox .box .list{display: none; overflow-y: auto; position: absolute; top: 40px; left: 0; z-index: 10; width: 100%; max-height: 200px; padding: 8px 0px; background-color: #23252b; border: 1px solid #292c34; box-sizing: border-box;}
 .selectBox .box .list::-webkit-scrollbar{width: 10px; height: 0;}
 .selectBox .box .list::-webkit-scrollbar-button:start:decrement,
@@ -273,4 +274,70 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 
 .active {
     background: darkred !important;
+}
+
+.popup {
+    position: absolute;
+    width: 200px;
+    top: 124px;
+    left: 795px;
+    z-index: 10;
+    background: black;
+}
+
+.popup .popupTitle {
+    text-align: center;
+    background: #2a4ab4;
+    padding: 10px;
+}
+
+.popup .popupContent {
+    margin: 10px 0px 10px 0px;
+    padding: 10px;
+}
+
+.popup .popupContent ul li span:first-child {
+    color: #a1a4ac;
+}
+
+.popupButton .button {
+    width: 54px;
+    margin: 0px 8px 0px 0px;
+    padding: 6px 4px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 4px;
+    background: #2a4ab4;
+    cursor: pointer;
+}
+
+.popupButton {
+    text-align: center;
+    height: 33px;
+}
+
+.listMore {
+    position: absolute;
+    background: black;
+    display: none;
+    z-index: 1;
+    color: #7f8491;
+}
+
+.listMore.on {
+    display: block;
+}
+
+.listMore ul li {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.listMore ul li:hover{
+    color: white;
+}
+
+.displayBtn.return {
+    visibility: hidden;
 }
