--- a/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
@@ -3,10 +3,12 @@
     <aside class="accordion_menu accordion">
         <ul class="accordion">
             <li id="one" class="multi">
-                <a href="#one">이벤트 관리<span>20</span></a>
-                <ul class="accordion_sub_menu">
+                <a href="#one">이벤트 조회<span>20</span></a>
+                <ul class="accordion_sub_menu" style="height: 240px;"> <!--임시 css-->
                     <li id="event1"><a href="/pages/inqry/event1">스마트 도시 이벤트<span>12</span></a></li>
                     <li id="event2"><a href="/pages/inqry/event2">시설물 장애 이벤트<span>8</span></a></li>
+                    <li id="eventCabinet"><a href="/pages/inqry/eventCabinet">스마트분전함 이벤트<span>8</span></a></li>
+                    <li id="eventDron"><a href="/pages/inqry/eventDron">드론 관제 이벤트<span>8</span></a></li>
                 </ul>
             </li>
             <li id="station">
