상세보기 배경 include

--- a/danusys-platform/src/main/resources/templates/layout/layout_inqry.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_inqry.html
@@ -7,6 +7,7 @@
 
 <body>
 <div class="wrap">
+    <th:block th:replace="fragments/default/modal_bg :: modalBgFragment" />
     <th:block th:replace="fragments/default/header :: headerFragment" />
 
     <div class="inquiry">
