--- a/danusys-drone/src/main/resources/templates/view/pages/mission.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/mission.html
@@ -79,16 +79,16 @@
                     </div>
                     <p class="radioButton">
                             <span class="radio">
-                                <input type="radio" id="missionName" name="" checked="">
+                                <input type="radio" id="missionName" name="radio" checked="">
                                 <label for="missionName"><span class="round">라디오버튼</span>미션명</label>
                             </span>
                         <span class="radio">
-                                <input type="radio" id="ID" name="">
-                                <label for="ID"><span class="round">라디오버튼</span>ID</label>
+                                <input type="radio" id="adminUserId" name="radio">
+                                <label for="adminUserId"><span class="round">라디오버튼</span>ID</label>
                             </span>
                     </p>
                     <p class="searchInput">
-                        <input type="text" placeholder="검색어 입력">
+                        <input type="text" placeholder="검색어 입력" id="searchText">
                         <i><img src="images/default/search.svg"></i>
                     </p>
 
@@ -101,11 +101,11 @@
 
                 </div>
             </section>
-            <div class="missionSummary">
+            <div class="missionSummary" style="display: none;">
                 <ul>
                     <li><span>미션명</span><p id="summaryName"></p></li>
-                    <li><span>총 거리</span><p id="summaryDistance">00.00000</p><small>km</small></li>
-                    <li><span>예상 시간</span><p id="summaryTime">00</p><small>분</small></li>
+                    <li><span>총 거리</span><p id="summaryDistance"></p><small>km</small></li>
+                    <li><span>예상 시간</span><p id="summaryTime"></p><small>분</small></li>
                     <li><span>최종 수정</span><p id="summaryUserId"></p><small><p id="summaryUpdateDt"></p></small></li>
                 </ul>
             </div>
