--- a/danusys-drone/src/main/resources/templates/test/droneFrame.html
+++ b/danusys-drone/src/main/resources/templates/test/droneFrame.html
@@ -142,9 +142,9 @@
                 <dl>
                     <dt>
                         <select>
-                            <option>신림면 11구역 정기 순찰</option>
+               <!--             <option>신림면 11구역 정기 순찰</option>
                             <option>신림면 12구역 정기 순찰</option>
-                            <option>신림면 13구역 정기 순찰</option>
+                            <option>신림면 13구역 정기 순찰</option>-->
                         </select>
                     </dt>
                     <dd>
