--- a/danusys-drone/src/main/resources/templates/test/droneFrame.html
+++ b/danusys-drone/src/main/resources/templates/test/droneFrame.html
@@ -155,7 +155,9 @@
                         </div>
                     </dd>
                 </dl>
-                <div class="picture"></div>
+                <div class="picture">
+                    <img src="C:\Users\owner//dev/upload/135/소프트웨어등록.PNG">
+                </div>
             </section>
             <section class="droneFrameRight">
                 <div class="articleTitle">
