droneId:'' 일때 전체검색

--- a/danusys-drone/src/main/resources/templates/test/droneFrame.html
+++ b/danusys-drone/src/main/resources/templates/test/droneFrame.html
@@ -156,7 +156,7 @@
                     </dd>
                 </dl>
                 <div class="picture">
-                    <img src="C:\Users\owner//dev/upload/135/소프트웨어등록.PNG">
+                    <img src="">
                 </div>
             </section>
             <section class="droneFrameRight">
