--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -107,12 +107,12 @@
                                 <dt>계정 상태</dt>
                                 <dd>
                                     <span>
-                                        <input type="checkbox" id="accountState01" name="status" value="2">
-                                        <label for="accountState01"><span></span>정상</label>
+                                        <input type="radio" id="account_status_use" name="status" data-value="2"> <!--value 임시값-->
+                                        <label for="account_status_use"><span class="round"></span>사용</label>
                                     </span>
                                     <span>
-                                        <input type="checkbox" id="accountState02" name="status">
-                                        <label for="accountState02"><span></span>사용 안함</label>
+                                        <input type="radio" id="account_status_none" name="status" data-value="a">
+                                        <label for="account_status_none"><span class="round"></span>사용 안함</label>
                                     </span>
                                 </dd>
                             </dl>
