--- a/danusys-drone/src/main/resources/templates/test/createMisson.html
+++ b/danusys-drone/src/main/resources/templates/test/createMisson.html
@@ -20,6 +20,7 @@
     <button id="log">누르면 로그가나와요</button>
     <button id="play"> 누르면 다시 실행되요</button>
     <button id="pause"> 누르면 일시정지되요</button>
+    <button id="testtest">누르면파일 다운로드되요</button>
 
 </table>
 
@@ -27,6 +28,15 @@
 
 
 <script>
+
+    $("#testtest").on("click",function (){
+        $.ajax({
+            url:"/file/2022 인사고과_목표설정_부서(서비스개발부-O-Lab)_OOO.xlsx",
+            type:"POST",
+
+        })
+    });
+
     let i = 0;
     let mission_id=0;
     $("#createMissionDetails").on("click", function () {
