--- a/danusys-drone/src/main/resources/templates/test/droneFrame.html
+++ b/danusys-drone/src/main/resources/templates/test/droneFrame.html
@@ -436,10 +436,10 @@
 
 
 
-    $("#file").on('change',function(){
-        var fileName = $("#file").val();
-        $(".uploadName").val(fileName);
-    });
+    // $("#file").on('change',function(){
+    //     var fileName = $("#file").val();
+    //     $(".uploadName").val(fileName);
+    // });
 
 
 </script>
