업로드 다운로드 이미지 보여주기 추가

--- a/danusys-drone/src/main/resources/templates/test/droneFrame.html
+++ b/danusys-drone/src/main/resources/templates/test/droneFrame.html
@@ -17,7 +17,7 @@
         <h1 class="logo"><i><img src="images/um/headerMenu.svg"></i>드론관제시스템</h1>
         <ul class="gnm">
             <li><a>Home</a></li>
-            <li><a>대시보드</a></li>
+            <li><a href="/file/20220216_161850_소프트웨어등록.PNG">대시보드</a></li>
             <li class="on"><a>드론</a></li>
             <li><a>미션</a></li>
             <li><a>비행</a></li>
