경유지 입력시 한글 입력

--- a/danusys-drone/src/main/resources/templates/test/droneLog.html
+++ b/danusys-drone/src/main/resources/templates/test/droneLog.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="./script.js"></script>
+    <script src="/js/um/log.js" defer></script>
 </head>
 
 <body>
@@ -32,7 +33,7 @@
     <div class="droneFrameWrap">
         <section class="droneLog">
             <article class="searchForm">
-                <h6>스토리지</h6>
+                <h6>비행로그</h6>
                 <form>
                     <div>
                         <dl class="dateSet">
